Added Heading & Styled

--- a/web/index.html
+++ b/web/index.html
@@ -4,8 +4,15 @@
     <head>
         <title></title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <link rel="stylesheet" href="main.css" type="text/css"/>
     </head>
     <body>
-        <div></div>
+        <h1>Michael Grinker</h1>
+        <hr/>
+        <h3>1641 S. Berlin Avenue New Berlin, Wisconsin 53151</h3>
+        <h3>262-785-1373 mgrinker@my.wctc.edu</h3>
+        
+        
+        <div class ="divContent"></div>
     </body>
 </html>
