--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>My Resume</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link rel="stylesheet" href="main.css" type="text/css"/>
     </head>
